binary_files library now fully functional, but PLEASE READ THE README

--- a/binary_files/makefile
+++ b/binary_files/makefile
@@ -1,21 +1,24 @@
 #binary_files/makefile
 # simple makefile for the binary_files library
-# files: source files: binary_files.cpp 
-#        header files: 
-# executable file: binary_files
+# files: source files: binary_files.cpp generate_binary_files.cpp
+#        header files: binary_files.h
+# executable file: generate_binary_files
 #
 
 # first define target file : binary_files
 #              dependencies are the object files that build the program
 
-binary_files: binary_files.o 
-	g++ -o binary_files binary_files.o
+binary_files: binary_files.o generate_binary_files.o
+	g++ -o generate_binary_files binary_files.o generate_binary_files.o
 
-binary_files.o: binary_files.cpp
+binary_files.o: binary_files.cpp binary_files.h
 	g++ -c binary_files.cpp
 
+generate_binary_files.o: generate_binary_files.cpp binary_files.h
+	g++ -c generate_binary_files.cpp
+
 clean:
-	rm binary_files binary_files.o
+	rm generate_binary_files binary_files.o generate_binary_files.o
 
 # that's all
 
