now have seperate programs to train pearson correlations on each of the 4 partitions

--- a/movie_knn/makefile
+++ b/movie_knn/makefile
@@ -4,6 +4,20 @@
 #        header files: movie_knn.h movie_knn_pearson.h
 # executable file: generate_movie_knn
 
+all: movie_knn_train_pearson_1 movie_knn_train_pearson_2 movie_knn_train_pearson_3 movie_knn_train_pearson_4 generate_movie_knn
+
+movie_knn_train_pearson_1: ../binary_files/binary_files.o movie_knn.o movie_knn_pearson.o movie_knn_train_pearson_1.o 
+	g++ -o movie_knn_train_pearson_1 ../binary_files/binary_files.o movie_knn.o movie_knn_pearson.o movie_knn_train_pearson_1.o
+
+movie_knn_train_pearson_2: ../binary_files/binary_files.o movie_knn.o movie_knn_pearson.o movie_knn_train_pearson_2.o 
+	g++ -o movie_knn_train_pearson_2 ../binary_files/binary_files.o movie_knn.o movie_knn_pearson.o movie_knn_train_pearson_2.o
+
+movie_knn_train_pearson_3: ../binary_files/binary_files.o movie_knn.o movie_knn_pearson.o movie_knn_train_pearson_3.o 
+	g++ -o movie_knn_train_pearson_3 ../binary_files/binary_files.o movie_knn.o movie_knn_pearson.o movie_knn_train_pearson_3.o
+
+movie_knn_train_pearson_4: ../binary_files/binary_files.o movie_knn.o movie_knn_pearson.o movie_knn_train_pearson_4.o 
+	g++ -o movie_knn_train_pearson_4 ../binary_files/binary_files.o movie_knn.o movie_knn_pearson.o movie_knn_train_pearson_4.o
+
 generate_movie_knn: ../binary_files/binary_files.o movie_knn.o movie_knn_pearson.o generate_movie_knn.o 
 	g++ -o generate_movie_knn ../binary_files/binary_files.o movie_knn.o movie_knn_pearson.o generate_movie_knn.o
 
@@ -16,8 +30,20 @@ movie_knn_pearson.o: movie_knn_pearson.cpp movie_knn_pearson.h movie_knn.h ../bi
 generate_movie_knn.o: generate_movie_knn.cpp movie_knn.h movie_knn_pearson.h ../binary_files/binary_files.h
 	g++ -c generate_movie_knn.cpp
 
+movie_knn_train_pearson_1.o: movie_knn_train_pearson_1.cpp movie_knn.h movie_knn_pearson.h ../binary_files/binary_files.h
+	g++ -c movie_knn_train_pearson_1.cpp
+
+movie_knn_train_pearson_2.o: movie_knn_train_pearson_2.cpp movie_knn.h movie_knn_pearson.h ../binary_files/binary_files.h
+	g++ -c movie_knn_train_pearson_2.cpp
+
+movie_knn_train_pearson_3.o: movie_knn_train_pearson_3.cpp movie_knn.h movie_knn_pearson.h ../binary_files/binary_files.h
+	g++ -c movie_knn_train_pearson_3.cpp
+
+movie_knn_train_pearson_4.o: movie_knn_train_pearson_4.cpp movie_knn.h movie_knn_pearson.h ../binary_files/binary_files.h
+	g++ -c movie_knn_train_pearson_4.cpp
+
 clean:
-	rm generate_movie_knn movie_knn.o generate_movie_knn.o movie_knn_pearson.o
+	rm generate_movie_knn movie_knn.o generate_movie_knn.o movie_knn_pearson.o movie_knn_train_pearson_1.o movie_knn_train_pearson_1 movie_knn_train_pearson_2.o movie_knn_train_pearson_2 movie_knn_train_pearson_3.o movie_knn_train_pearson_3 movie_knn_train_pearson_4.o movie_knn_train_pearson_4
 
 # that's all
 
