--- a/Blending/makefile
+++ b/Blending/makefile
@@ -1,5 +1,5 @@
-run_blender: run_blender.o blender.o ../write_data/write_results.o ../binary_files/binary_files.o ../SVD_Oct18/svd_oct18.o ../SVD_Oct25/svd_oct25.o ../Baseline_Oct25/baseline_oct25.o ../SVD/learn_svd.o ../movie_knn/movie_knn.o
-	g++ -lgsl -lgslcblas -lm run_blender.o blender.o ../write_data/write_results.o ../binary_files/binary_files.o ../SVD_Oct18/svd_oct18.o ../SVD_Oct25/svd_oct25.o ../Baseline_Oct25/baseline_oct25.o ../SVD/learn_svd.o ../movie_knn/movie_knn.o -o run_blender
+run_blender: run_blender.o blender.o ../write_data/write_results.o ../binary_files/binary_files.o ../SVD_Oct18/svd_oct18.o ../SVD_Oct25/svd_oct25.o ../Baseline_Oct25/baseline_oct25.o ../SVD/learn_svd.o  ../movie_knn/movie_knn.o ../movie_knn/movie_knn_pearson.o
+	g++ -lgsl -lgslcblas -lm run_blender.o blender.o ../write_data/write_results.o ../binary_files/binary_files.o ../SVD_Oct18/svd_oct18.o ../SVD_Oct25/svd_oct25.o ../Baseline_Oct25/baseline_oct25.o ../SVD/learn_svd.o ../movie_knn/movie_knn.o ../movie_knn/movie_knn_pearson.o -o run_blender
 
 run_blender.o: run_blender.cpp 
 	g++ -lgsl -lgslcblas -lm -c run_blender.cpp
@@ -22,6 +22,20 @@ blender.o: blender.cpp
 ../Baseline/baseline_predictor.o::
 	@$(MAKE) -C $(@D) $(@F) -q || \
 	$(MAKE) -C $(@D) $(@F)
+
+../movie_knn/movie_knn.o::
+	@$(MAKE) -C $(@D) $(@F) -q || \
+	$(MAKE) -C $(@D) $(@F)
+
+../movie_knn/movie_knn_pearson.o::
+	@$(MAKE) -C $(@D) $(@F) -q || \
+	$(MAKE) -C $(@D) $(@F)
+
+../SVD_Oct25/svd_oct25.o::
+	@$(MAKE) -C $(@D) $(@F) -q || \
+	$(MAKE) -C $(@D) $(@F)
+
+
 
 clean:
 	rm *.o run_blender
