add all_3s to blend

--- a/Blending/makefile
+++ b/Blending/makefile
@@ -1,5 +1,5 @@
-run_blender: run_blender.o blender.o ../write_data/write_results.o ../binary_files/binary_files.o ../SVD_Oct18/svd_oct18.o ../SVD_Oct25/svd_oct25.o ../Baseline_Oct25/baseline_oct25.o ../SVD/learn_svd.o  ../movie_knn/movie_knn.o ../movie_knn/movie_knn_pearson.o ../SVD_Nov2/svd_nov2.o
-	g++ -lgsl -lgslcblas -lm run_blender.o blender.o ../write_data/write_results.o ../binary_files/binary_files.o ../SVD_Oct18/svd_oct18.o ../SVD_Oct25/svd_oct25.o ../Baseline_Oct25/baseline_oct25.o ../SVD/learn_svd.o ../movie_knn/movie_knn.o ../movie_knn/movie_knn_pearson.o ../SVD_Nov2/svd_nov2.o -o run_blender
+run_blender: run_blender.o blender.o ../write_data/write_results.o ../binary_files/binary_files.o ../SVD_Oct18/svd_oct18.o ../SVD_Oct25/svd_oct25.o ../Baseline_Oct25/baseline_oct25.o ../SVD/learn_svd.o  ../movie_knn/movie_knn.o ../movie_knn/movie_knn_pearson.o ../SVD_Nov2/svd_nov2.o ../all_3_predictor/all_3_predictor.o
+	g++ -lgsl -lgslcblas -lm run_blender.o blender.o ../write_data/write_results.o ../binary_files/binary_files.o ../SVD_Oct18/svd_oct18.o ../SVD_Oct25/svd_oct25.o ../Baseline_Oct25/baseline_oct25.o ../SVD/learn_svd.o ../movie_knn/movie_knn.o ../movie_knn/movie_knn_pearson.o ../SVD_Nov2/svd_nov2.o ../all_3_predictor/all_3_predictor.o -o run_blender
 
 run_blender.o: run_blender.cpp 
 	g++ -lgsl -lgslcblas -lm -c run_blender.cpp
@@ -8,6 +8,10 @@ blender.o: blender.cpp
 	g++ -lgsl -lgslcblas -lm -c blender.cpp
 
 ../write_data/write_results.o::
+	@$(MAKE) -C $(@D) $(@F) -q || \
+	$(MAKE) -C $(@D) $(@F)
+
+../all_3_predictor/all_3_predictor.o::
 	@$(MAKE) -C $(@D) $(@F) -q || \
 	$(MAKE) -C $(@D) $(@F)
 
