Working SVM predictor.

--- a/SVM/makefile
+++ b/SVM/makefile
@@ -1,7 +1,10 @@
-all: gen_svm_datafiles
+all: svm_executable svd_svm_nov6.o
 
-gen_svm_datafiles: svd_svm_nov6.cpp gen_svm_datafiles.cpp 
-	g++ -lgsl -lgslcblas -lm gen_svm_datafiles.cpp svd_svm_nov6.cpp ../Baseline_Oct25/baseline_oct25.o ../binary_files/binary_files.o -o gen_svm_datafiles
+svm_executable: svd_svm_nov6.o svm_executable.cpp libsvm-3.1/svm.cpp
+	g++ -lgsl -lgslcblas -lm svm_executable.cpp svd_svm_nov6.o ../Baseline_Oct25/baseline_oct25.o ../binary_files/binary_files.o ../write_data/write_results.o libsvm-3.1/svm.cpp -o svm_executable
+
+svd_svm_nov6.o: svd_svm_nov6.cpp
+	g++ -lgsl -lgslcblas -lm -c svd_svm_nov6.cpp -o svd_svm_nov6.o
 
 clean:
-	rm *.o gen_svm_datafiles
+	rm *.o svm_executable
