added executable that remembers and rmse_probes

--- a/RBM/makefile
+++ b/RBM/makefile
@@ -1,8 +1,16 @@
+all: rbm_executable rbm_executable2
+
 rbm_executable: rbm_executable.o rbm.o ../binary_files/binary_files.o
 	g++ rbm_executable.o rbm.o ../binary_files/binary_files.o -o rbm_executable
 
+rbm_executable2: rbm_executable2.o rbm.o ../binary_files/binary_files.o
+	g++ rbm_executable2.o rbm.o ../binary_files/binary_files.o -o rbm_executable2
+
 rbm_executable.o: rbm_executable.cpp
 	g++ -c rbm_executable.cpp -o rbm_executable.o
+
+rbm_executable2.o: rbm_executable2.cpp
+	g++ -c rbm_executable2.cpp -o rbm_executable2.o
 
 rbm.o: rbm.cpp rbm.h 
 	g++ -c rbm.cpp
