some improvements that should hopefully speed up RBM code

--- a/RBM/makefile
+++ b/RBM/makefile
@@ -1,19 +1,19 @@
 all: rbm_executable rbm_executable2
 
 rbm_executable: rbm_executable.o rbm.o ../binary_files/binary_files.o
-	g++ rbm_executable.o rbm.o ../binary_files/binary_files.o -o rbm_executable
+	g++ -O2 rbm_executable.o rbm.o ../binary_files/binary_files.o -o rbm_executable
 
 rbm_executable2: rbm_executable2.o rbm.o ../binary_files/binary_files.o
-	g++ rbm_executable2.o rbm.o ../binary_files/binary_files.o -o rbm_executable2
+	g++ -O2 rbm_executable2.o rbm.o ../binary_files/binary_files.o -o rbm_executable2
 
 rbm_executable.o: rbm_executable.cpp
-	g++ -c rbm_executable.cpp -o rbm_executable.o
+	g++ -O2 -c rbm_executable.cpp -o rbm_executable.o
 
 rbm_executable2.o: rbm_executable2.cpp
-	g++ -c rbm_executable2.cpp -o rbm_executable2.o
+	g++ -O2 -c rbm_executable2.cpp -o rbm_executable2.o
 
 rbm.o: rbm.cpp rbm.h 
-	g++ -c rbm.cpp
+	g++ -O2 -c rbm.cpp
 
 ../binary_files/binary_files.o::
 	@$(MAKE) -C $(@D) $(@F) -q || \
